test/compile_fail/unhandled_effect.shift
(module unhandled_effect
  (effect input i32 i32)
  (export bad () i32
    (handlers)
    (program
      (let value (perform input 1))
      (return value))))
